load("@rules_cc//cc:defs.bzl", "cc_library")

_public_hdrs = [
    "include/boost/*.hpp",
    "include/boost/lexical_cast/*.hpp",
]

cc_library(
    name = "lexical_cast_internal",
    hdrs = glob(["include/boost/**/*.hpp"], exclude = _public_hdrs),
)

cc_library(
    name = "lexical_cast",
    visibility = ["//visibility:public"],
    includes = ["include"],
    hdrs = glob(_public_hdrs),
    deps = [
        ":lexical_cast_internal",
        "@boost//integer",
        "@boost//array",
        "@boost//container",
    ],
)
